Bug 1554065.  Fix the requestor nsDocShell::DoFindItemWithName passes to TabGroup::FindItemWithName.  r=nika

The requestor should be ourselves: the toplevel docshell that the tabgroup does
not need to look in when doing the search.

Differential Revision: https://phabricator.services.mozilla.com/D32422